# ply

./: .gitignore  README.md  ROADMAP.md  flutter_rust_bridge.yaml
.github/ISSUE_TEMPLATE/: crash_report.yml
.github/workflows/: build-apk.yml
app/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
app/android/: settings.gradle.kts
app/android/app/: build.gradle.kts
app/branding/: .gitignore  gen_icon.py  render_icons.sh
app/integration_test/: m1_device_test.dart  m2_dto_spike_test.dart  m2_editor_test.dart  m2_save_reopen_test.dart  m3_drive_switch_test.dart  m3_export_fidelity_test.dart  m3_structure_test.dart  m3_validation_test.dart  m3_weft_calc_test.dart  m4_color_bands_test.dart  m4_gate_test.dart  m4_palette_test.dart  m4_thickness_render_test.dart  m5_calc_test.dart  m5_knit_save_reopen_test.dart  m5_newdraft_test.dart  m6_e2e_test.dart  smoke_release_test.dart
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/rust_builder/: pubspec.yaml
app/rust_builder/android/: build.gradle  settings.gradle
app/rust_builder/ios/: rust_lib_ply.podspec
app/rust_builder/linux/: CMakeLists.txt
app/rust_builder/macos/: rust_lib_ply.podspec
app/rust_builder/windows/: CMakeLists.txt
app/test/: app_settings_test.dart  cable_builder_dialog_test.dart  calculators_screen_test.dart  diagnostics_test.dart  dimensions_bar_test.dart  dimensions_bar_tooltip_test.dart  double_weave_layers_test.dart  draft_doc_test.dart  draft_editor_notifier_test.dart  draft_grids_test.dart  draft_layout_test.dart  draft_mapping_test.dart  draft_meta_test.dart  editor_providers_test.dart  editor_screen_test.dart  editor_state_test.dart  glossary_screen_test.dart  glossary_test.dart  help_screen_test.dart  home_screen_test.dart  integrated_draft_view_test.dart  knit_calculators_test.dart  knit_chart_axis_test.dart  knit_chart_view_test.dart  knit_editor_screen_test.dart  knit_editor_state_test.dart  knit_legend_sheet_test.dart  knit_library_screen_test.dart  knit_planning_sheet_test.dart  knit_selection_test.dart  knit_settings_sheet_test.dart  knit_written_screen_test.dart  layer_inspector_test.dart  library_screen_test.dart  loom_type_test.dart  nalbind_project_test.dart  nalbind_reference_screen_test.dart  name_input_dialog_test.dart  new_knit_setup_test.dart  palette_sheet_test.dart  (+14 more)
app/tool/: gen_glossary.dart
docs/: ARCHITECTURE.md  CORRECTNESS_GATE.md  DATA_MODEL.md  FFI_BOUNDARY.md  GLOSSARY.md  KNIT_DESIGN.md  NALBIND_DESIGN.md  WIF_MAPPING.md
rust/: Cargo.toml
rust/ply-bridge/: Cargo.toml
rust/ply-bridge/src/: api.rs  dto.rs  knit_dto.rs  lib.rs  nalbind_dto.rs
rust/ply-common/: Cargo.toml
rust/ply-common/src/: lib.rs
rust/ply-knit/: Cargo.toml
rust/ply-knit/src/: calc.rs  error.rs  lib.rs  pattern.rs  render.rs  validate.rs  written.rs
rust/ply-knit/tests/: knit_proptest.rs
rust/ply-nalbind/: Cargo.toml
rust/ply-nalbind/src/: diagram.rs  dictionary.rs  error.rs  lib.rs  notation.rs  stitch.rs  validate.rs
rust/ply-nalbind/tests/: nalbind_proptest.rs
rust/ply-weave/: Cargo.toml
rust/ply-weave/src/: calc.rs  draft.rs  drawdown.rs  error.rs  lib.rs  profile.rs  structure.rs  validate.rs  wif.rs
rust/ply-weave/tests/: golden_render.rs  wif_proptest.rs
rust/ply-weave/tests/fixtures/: plain_2x2.wif  twill_2_2.wif
(+84 files in other folders)
