[workspace]
resolver = "2"
members = ["ply-common", "ply-weave", "ply-knit", "ply-nalbind", "ply-bridge"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
ply-common = { path = "ply-common" }
ply-weave = { path = "ply-weave" }
ply-knit = { path = "ply-knit" }
ply-nalbind = { path = "ply-nalbind" }
