[package]
name = "ply-bridge"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# cdylib/staticlib for the mobile FFI targets; lib so the workspace can `cargo check` it.
[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
serde = { workspace = true }
ply-common = { workspace = true }
ply-weave = { workspace = true }
flutter_rust_bridge = "=2.12.0"
