[package]
# Underscore, not "ply-bridge": Cargokit looks up the built library as `lib<package
# name>.so` WITHOUT normalizing hyphens (cargokit getArtifactNames), while cargo emits
# `libply_bridge.so`. A hyphenated package name would make Cargokit miss the artifact and
# bundle no .so. `ply_bridge` makes cargo output, the frb Dart loader stem, and Cargokit
# all agree. The crate directory stays `ply-bridge`.
name = "ply_bridge"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# cdylib/staticlib for the mobile FFI targets; lib so the workspace can `cargo check` it.
[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
serde = { workspace = true }
ply-common = { workspace = true }
ply-weave = { workspace = true }
ply-knit = { workspace = true }
ply-nalbind = { workspace = true }
flutter_rust_bridge = "=2.12.0"
