[package]
name = "ply-nalbind"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ply-common = { workspace = true }

[dev-dependencies]
# Property-based hardening: notation round-trip identity + no-panic over arbitrary strings.
proptest = "1"
