[package]
name = "ply-weave"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
ply-common = { workspace = true }

[dev-dependencies]
# Property-based tests / fuzzing of the WIF round-trip + parser robustness (stable toolchain).
proptest = "1"
